@@ -1,7 +1,6 @@
 package org.folio.services.domainevent;
 
 import static io.vertx.core.Future.succeededFuture;
-import static java.util.stream.Collectors.toList;
 import static org.apache.logging.log4j.LogManager.getLogger;
 import static org.folio.InventoryKafkaTopic.ITEM;
 import static org.folio.rest.tools.utils.TenantTool.tenantId;
@@ -11,6 +10,8 @@ import io.vertx.core.Future;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
+import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.commons.lang3.tuple.Triple;
 import org.apache.logging.log4j.Logger;
@@ -18,6 +19,7 @@ import org.folio.persist.HoldingsRepository;
 import org.folio.persist.ItemRepository;
 import org.folio.rest.jaxrs.model.HoldingsRecord;
 import org.folio.rest.jaxrs.model.Item;
+import org.folio.rest.jaxrs.model.PublishReindexRecords;
 
 public class ItemDomainEventPublisher extends AbstractDomainEventPublisher<Item, ItemWithInstanceId> {
   private static final Logger log = getLogger(ItemDomainEventPublisher.class);
@@ -53,6 +55,18 @@ public class ItemDomainEventPublisher extends AbstractDomainEventPublisher<Item,
       .compose(domainEventService::publishRecordsUpdated);
   }
 
+  public Future<Void> publishReindexItems(String key, List<Item> items) {
+    if (CollectionUtils.isEmpty(items) || StringUtils.isBlank(key)) {
+      return succeededFuture();
+    }
+
+    var itemsWithInstance = items.stream()
+      .map(item -> new ItemWithInstanceId(item, null))
+      .toList();
+
+    return domainEventService.publishReindexRecords(key, PublishReindexRecords.RecordType.ITEM, itemsWithInstance);
+  }
+
   @Override
   public void publishRemoved(String instanceId, String itemRaw) {
     String instanceIdAndItemRaw = "{\"instanceId\":\"" + instanceId + "\"," + itemRaw.substring(1);
@@ -64,7 +78,7 @@ public class ItemDomainEventPublisher extends AbstractDomainEventPublisher<Item,
     return holdingsRepository.getById(items, Item::getHoldingsRecordId)
       .map(holdings -> items.stream()
         .map(item -> pair(getInstanceId(holdings, item), item))
-        .collect(toList()));
+        .toList());
   }
 
   @Override
@@ -81,8 +95,8 @@ public class ItemDomainEventPublisher extends AbstractDomainEventPublisher<Item,
     HoldingsRecord oldHoldings, HoldingsRecord newHoldings, Collection<Item> oldItems, Collection<Item> newItems) {
 
     return mapOldRecordsToNew(
-      oldItems.stream().map(item -> pair(oldHoldings.getInstanceId(), item)).collect(toList()),
-      newItems.stream().map(item -> pair(newHoldings.getInstanceId(), item)).collect(toList()));
+      oldItems.stream().map(item -> pair(oldHoldings.getInstanceId(), item)).toList(),
+      newItems.stream().map(item -> pair(newHoldings.getInstanceId(), item)).toList());
   }
 
   private String getInstanceId(Map<String, HoldingsRecord> holdings, Item item) {
